internal/xds/translator/testdata/out/xds-ir/http-health-check.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        - name: test
          stringMatch:
            suffix: end
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
